--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "gh-pages": "^6.3.0",
+    "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
